<resources>
    <string name="app_name">TaskManagerAplication</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="bon_appetit">Bon appetit!</string>
    <string name="registration"><u>Have not an account ?</u></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"><b>Name Surname</b></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="select_picture">Select picture</string>
    <string name="you_can_instantly_choose_your_desired_dishes_see_your_balance_make_payments_as_well_as_track_your_expenses">You can instantly choose your desired dishes, see your balance, make payments, as well as track your expenses.</string>
    <string name="this_is_a_kitchen_application_for_companies">This is a kitchen application for companies</string>
    <string name="welcome">Welcome!</string>
    <string name="skip">skip</string>
    <string name="my_preference">instigatemobile.com.cookmaster.MyPref</string>
    <string name="my_preference_key">instigatemobile.com.cookmaster.MyPrefKey</string>
    <string name="start">Start</string>
    <string name="welcome_to_home_page">Welcome to Home Page!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email_adress">Email Adress</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password"><u>Forgot password ?</u></string>
    <string name="send_pass">Send</string>
    <string name="action_about">About</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="home">Home</string>
    <string name="current_consultants">Current Consultants</string>
    <string name="default_status">Default status</string>
    <string name="payment">Payment</string>
    <string name="payment_history">Payment History</string>
    <string name="log_out">Log Out</string>
    <string name="todayManu">Menu of today</string>
    <string name="status">Status</string>
    <string name="daily_expenses">Daily expenses</string>
    <string name="total_expenses">Total expenses</string>
    <string name="enter_email">Invalid email</string>
    <string name="email_sent">Reset email sent!</string>
    <string name="error">Error while sending email.</string>
    <string name="enter_your_email_please">Enter your email please</string>
    <string name="please_wait">Please wait</string>
    <string name="enter_your_email_in_order_to_reset">Enter your email in order to reset</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="title_activity_list_of_tasks">ListOfTasksActivity</string>
    <string name="titl">title</string>
</resources>
