<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="#9e012d"
    android:id="@+id/login_fragment"
    tools:context=".SignInFragment">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginRight="@dimen/margin_left_right"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_left_right"
        android:paddingRight="@dimen/padding_left_right"
        android:background="@color/transparent">

        <TextView
            android:layout_marginTop="@dimen/pass_margin_bottom"
            android:layout_gravity="center"
            android:text="@string/email_adress"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="@dimen/pass_margin_bottom">
            <EditText
                android:id="@+id/signin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pass_margin_bottom"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/signin_btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/btn_color"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin_top_bottom"
            android:layout_marginBottom="@dimen/btn_margin_top_bottom"
            android:padding="12dp"
            android:text="@string/sign_in"/>

        <Button
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="#00ffffff"
            android:textStyle="italic"
            android:id="@+id/registration_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:layout_gravity="center"
            android:textSize="@dimen/forgot_size"/>
    </LinearLayout>
</ScrollView>

